feat(security): integrate User entity with Spring security authentication